--- a/study-summer/app/sass/blocks/slider.scss
+++ b/study-summer/app/sass/blocks/slider.scss
@@ -22,23 +22,44 @@
   border-bottom-right-radius: 15px; 
   background-color: #fff;
   transform: translateX(-50%);
+  z-index: 1;
 }
 
 .slider__list {
+  position: relative;
+  height: 505px;
   margin: 0;
   padding: 0;
   list-style: none;
+  transition: 0.5s;
 }
 
 .slider__item {
+  position: absolute;
+  box-sizing: border-box;
+  width: 100%;
   padding-top: 195px;
   padding-bottom: 195px;
   padding-left: 180px;
+  border-radius: 7px;
   background-color: #000;
-  background-image: url('../img/slider-1.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  opacity: 0;
+  transition: 0.8s;
+  
+  &:nth-child(1) {
+    background-image: url('../img/slider-1.jpg');
+  }
+  
+  &:nth-child(2) {
+    background-image: url('../img/slider-2.jpg');
+  }
+  
+  &--show {
+    opacity: 1;
+  }
 }
 
 .slider__name {
@@ -75,5 +96,124 @@
   &:hover,
   &:focus {
     background-color: darken($red, 10%);
+  }
+}
+
+.slider__control {
+  position: absolute;
+  top: 50%;
+  width: 40px;
+  height: 40px;
+  padding: 0;
+  font-size: 0;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  transform: translateY(-50%);
+  
+  &--prev {
+    left: 100px;
+  }
+  
+  &--next {
+    right: 100px;
+  }
+  
+  &:hover,
+  &:focus {
+    
+    .slider__icon {
+      opacity: 1;
+    }
+  }
+}
+
+.slider__icon {
+  fill: #fff;
+  opacity: 0.8;
+  transition: 0.3s;
+}
+
+.slider__dots {
+  position: absolute;
+  bottom: 30px;
+  left: 50%;
+  display: flex;
+  transform: translateX(-50%);
+}
+
+.slider__dot {
+  width: 10px;
+  height: 10px;
+  margin-right: 10px;
+  padding: 0;
+  font-size: 0;
+  border: none;
+  border-radius: 50%;
+  background-color: #fff;
+  cursor: pointer;
+  opacity: 0.5;
+  transition: 0.3s;
+  
+  &:hover,
+  &:focus {
+    background-color: $blue;
+    opacity: 1;
+    transform: scale(1.2);
+  }
+  
+  &:last-child {
+    margin-right: 0;
+  }
+  
+  &--active {
+    background-color: $blue;
+    opacity: 1;
+  }
+}
+
+.slider__social {
+  position: absolute;
+  top: 80px;
+  right: -50px;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.slider__link {
+  display: block;
+  width: 25px;
+  height: 25px;
+  margin-bottom: 10px;
+  font-size: 0;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  opacity: 0.7;
+  transition: 0.3s;
+  
+  &:hover,
+  &:focus {
+    opacity: 1;
+    transform: scale(1.1);
+  }
+  
+  &--info {
+    background-image: url('../img/svg/info.svg');
+  }
+  
+  &--facebook {
+    background-image: url('../img/svg/facebook.svg');
+  }
+  
+  &--instagram {
+    background-image: url('../img/svg/instagram.svg');
+  }
+  
+  &--google {
+    background-image: url('../img/svg/google.svg');
   }
 }
