--- a/study-summer/app/sass/style.scss
+++ b/study-summer/app/sass/style.scss
@@ -13,5 +13,5 @@
 @import 'blocks/programs';
 @import 'blocks/leaders';
 @import 'blocks/geography';
-
+@import 'blocks/reviews';
 @import 'blocks/footer';
