--- a/study-summer/app/sass/style.scss
+++ b/study-summer/app/sass/style.scss
@@ -14,4 +14,5 @@
 @import 'blocks/leaders';
 @import 'blocks/geography';
 @import 'blocks/reviews';
+@import 'blocks/photo';
 @import 'blocks/footer';
