--- a/study-summer/app/sass/blocks/nav.scss
+++ b/study-summer/app/sass/blocks/nav.scss
@@ -44,3 +44,19 @@
     color: $blue;
   }
 }
+
+@media screen and ($tablet-widths) {
+  .nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: #fff;
+    z-index: 2;
+  }
+  
+  .nav__list {
+    flex-direction: column;
+  }
+}
