--- a/study-summer/app/sass/global/base.scss
+++ b/study-summer/app/sass/global/base.scss
@@ -35,5 +35,9 @@ body {
 @media screen and ($tablet-widths) {
   .container {
     width: 100%;
+    
+    &--full {
+      padding: 0;
+    }
   }
 }
