--- a/study-summer/app/sass/blocks/gallery.scss
+++ b/study-summer/app/sass/blocks/gallery.scss
@@ -19,7 +19,8 @@
 }
 
 .gallery__item {
-  // overflow: hidden;
+  position: relative;
+  cursor: pointer;
   
   &:nth-child(1) {
     width: 50%;
@@ -47,6 +48,26 @@
     width: 50%;
     margin-top: -4px;
   }
+  
+  &::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    opacity: 0.3;
+    transition: 0.3s;
+  }
+  
+  &:hover,
+  &:focus {
+    
+    &::after {
+      opacity: 0;
+    }
+  }
 }
 
 .gallery__img {
@@ -57,6 +78,6 @@
   
   &:hover,
   &:focus {
-    transform: scale(1.05);
+    
   }
 }
