--- a/study-summer/app/sass/blocks/photo.scss
+++ b/study-summer/app/sass/blocks/photo.scss
@@ -25,6 +25,10 @@
   margin: 0;
   padding: 0;
   list-style: none;
+  
+  &:last-child {
+    margin-bottom: 25px;
+  }
 }
 
 .photo__item {
@@ -39,6 +43,44 @@
   
   &:hover,
   &:focus {
-    transform: scale(1.1);
+    transform: scale(1.05);
+  }
+}
+
+.photo__call {
+  color: $text;
+  font-size: 25px;
+  font-weight: 500;
+  text-align: center;
+}
+
+.photo__hashtag {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 70px;
+}
+
+.photo__link {
+  width: 320px;
+  height: 30px;
+  font-size: 0;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  transition: 0.3s;
+  
+  &--facebook {
+    margin-right: 30px;
+    background-image: url('../img/svg/facebook-hashtag.svg');
+  }
+  
+  &--instagram {
+    background-image: url('../img/svg/instagram-hashtag.svg');
+  }
+  
+  &:hover,
+  &:focus {
+    transform: scale(1.05);
   }
 }
