--- a/study-summer/app/sass/blocks/slider.scss
+++ b/study-summer/app/sass/blocks/slider.scss
@@ -217,3 +217,9 @@
     background-image: url('../img/svg/google.svg');
   }
 }
+
+@media screen and (max-width: 1325px) {
+  .slider__social {
+    display: none;
+  }
+}
