--- a/study-summer/app/sass/blocks/features.scss
+++ b/study-summer/app/sass/blocks/features.scss
@@ -48,3 +48,28 @@
   font-size: 18px;
   font-weight: normal;
 }
+
+@media screen and ($tablet-widths) {
+  .features__list {
+    flex-direction: column;
+  }
+  
+  .features__item {
+    width: 340px;
+    margin-bottom: 20px;
+    padding-top: 14px;
+    padding-bottom: 14px;
+    
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+  
+  .features__name {
+    font-size: 18px;
+  }
+  
+  .features__text {
+    font-size: 16px;
+  }
+}
