--- a/study-summer/app/sass/blocks/gallery.scss
+++ b/study-summer/app/sass/blocks/gallery.scss
@@ -20,6 +20,7 @@
 
 .gallery__item {
   position: relative;
+  height: 250px;
   cursor: pointer;
   
   &:nth-child(1) {
@@ -36,17 +37,14 @@
   
   &:nth-child(4) {
     width: 15%;
-    margin-top: -4px;
   }
   
   &:nth-child(5) {
     width: 35%;
-    margin-top: -4px;
   }
   
   &:nth-child(6) {
     width: 50%;
-    margin-top: -4px;
   }
   
   &::after {
@@ -72,12 +70,39 @@
 
 .gallery__img {
   width: 100%;
-  height: 250px;
+  height: 100%;
   object-fit: cover;
-  transition: 0.3s;
+}
+
+@media screen and ($tablet-widths) {
+  .gallery__call {
+    font-size: 20px;
+  }
   
-  &:hover,
-  &:focus {
+  .gallery__item {
     
+    &:nth-child(1) {
+      width: 100%;
+    }
+    
+    &:nth-child(2) {
+      width: 50%;
+    }
+    
+    &:nth-child(3) {
+      width: 50%;
+    }
+    
+    &:nth-child(4) {
+      width: 25%;
+    }
+    
+    &:nth-child(5) {
+      width: 75%;
+    }
+    
+    &:nth-child(6) {
+      width: 100%;
+    }
   }
 }
