--- a/study-summer/app/sass/blocks/geography.scss
+++ b/study-summer/app/sass/blocks/geography.scss
@@ -12,6 +12,7 @@
 
 .geography__list {
   display: flex;
+  justify-content: space-between;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -20,8 +21,8 @@
 .geography__item {
   position: relative;
   height: 200px;
-  margin-right: 5px;
-  margin-bottom: 5px;
+  // margin-right: 5px;
+  margin-bottom: 3px;
   border-radius: 7px;
   overflow: hidden;
 }
@@ -42,6 +43,9 @@
 }
 
 .geography__img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
   transition: 0.3s;
 }
 
@@ -59,4 +63,57 @@
   position: absolute;
   top: 10px;
   right: 20px;
+}
+
+@media screen and ($tablet-widths) {
+  .geography__title {
+    font-size: 22px;
+  }
+  
+  .geography__list {
+    flex-wrap: wrap;
+  }
+  
+  .geography__item {
+    margin-bottom: 8px;
+    
+    &:nth-child(1) {
+      width: 49.5%;
+    }
+    
+    &:nth-child(2) {
+      width: 49.5%;
+    }
+    
+    &:nth-child(3) {
+      width: 49.5%;
+    }
+    
+    &:nth-child(4) {
+      width: 49.5%;
+    }
+    
+    &--second {
+      
+      &:nth-child(1) {
+        width: 100%;
+      }
+      
+      &:nth-child(2) {
+        width: 24.5%;
+      }
+      
+      &:nth-child(3) {
+        width: 24.5%;
+      }
+      
+      &:nth-child(4) {
+        width: 24.5%;
+      }
+      
+      &:nth-child(5) {
+        width: 24.5%;
+      }
+    }
+  }
 }
