--- a/study-summer/app/sass/blocks/nav.scss
+++ b/study-summer/app/sass/blocks/nav.scss
@@ -1,3 +1,9 @@
+.nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .nav__list {
   display: flex;
   align-items: center;
@@ -9,13 +15,9 @@
 .nav__item {
   margin-right: 25px;
   
-  &:first-child {
-    margin-right: auto; 
-  }
-  
   &:last-child {
     margin-right: 0;
-    margin-left: auto;
+    margin-left: 30px;
   }
 }
 
@@ -45,18 +47,71 @@
   }
 }
 
+.nav__menu {
+  display: none;
+}
+
 @media screen and ($tablet-widths) {
   .nav {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: #fff;
-    z-index: 2;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+  
+  .nav__control {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    z-index: 3;
   }
   
   .nav__list {
+    position: fixed;
+    top: 0;
+    left: 0;
     flex-direction: column;
+    justify-content: center;
+    width: 100vw;
+    height: 100vh;
+    background-color: #fff;
+    background-image: url('../img/nav-bg.jpg');
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-size: contain;
+    transition: 0.5s;
+    transform: translateY(-100%);
+    z-index: 2;
+  }
+  
+  .nav__item {
+    margin-right: 0;
+    margin-bottom: 30px;
+    
+    &:first-child,
+    &:last-child {
+      margin-left: 0;
+    }
+    
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+  
+  .nav__link {
+    font-size: 22px;
+  }
+  
+  .nav__menu {
+    display: block;
+    width: 35px;
+    height: 35px;
+    padding: 0;
+    font-size: 0;
+    border: none;
+    background-color: transparent;
+    background-image: url('../img/svg/nav.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
   }
 }
