--- a/study-summer/app/sass/blocks/photo.scss
+++ b/study-summer/app/sass/blocks/photo.scss
@@ -84,3 +84,17 @@
     transform: scale(1.05);
   }
 }
+
+@media screen and ($tablet-widths) {
+  .photo__title {
+    font-size: 22px;
+  }
+  
+  .photo__subtitle {
+    font-size: 16px;
+  }
+  
+  .photo__call {
+    font-size: 22px;
+  }
+}
