--- a/study-summer/app/sass/blocks/features.scss
+++ b/study-summer/app/sass/blocks/features.scss
@@ -73,3 +73,14 @@
     font-size: 16px;
   }
 }
+
+@media screen and ($mobile-widths) {
+  .features {
+    margin-bottom: 50px;
+  }
+  
+  .features__item {
+    box-sizing: border-box;
+    width: 100%;
+  }
+}
