--- a/study-summer/app/sass/blocks/gallery.scss
+++ b/study-summer/app/sass/blocks/gallery.scss
@@ -106,3 +106,31 @@
     }
   }
 }
+
+@media screen and ($mobile-widths) {
+  .gallery {
+    margin-bottom: 50px;
+  }
+  
+  .gallery__call {
+    margin-bottom: 30px;
+    font-size: 18px;
+  }
+  
+  .gallery__item {
+    height: 200px;
+    
+    &:nth-child(1),
+    &:nth-child(2),
+    &:nth-child(3),
+    &:nth-child(4),
+    &:nth-child(5),
+    &:nth-child(6) {
+      width: 100%;
+    }
+    
+    &::after {
+      display: none;
+    }
+  }
+}
