--- a/study-summer/app/sass/blocks/gallery.scss
+++ b/study-summer/app/sass/blocks/gallery.scss
@@ -46,32 +46,21 @@
   &:nth-child(6) {
     width: 50%;
   }
-  
-  &::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #000;
-    opacity: 0.3;
-    transition: 0.3s;
-  }
-  
-  &:hover,
-  &:focus {
-    
-    &::after {
-      opacity: 0;
-    }
-  }
+}
+
+.gallery__button {
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  border: none;
+  background-color: transparent;
 }
 
 .gallery__img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  cursor: pointer;
 }
 
 @media screen and ($tablet-widths) {
@@ -127,10 +116,6 @@
     &:nth-child(5),
     &:nth-child(6) {
       width: 100%;
-    }
-    
-    &::after {
-      display: none;
     }
   }
 }
