--- a/study-summer/app/sass/blocks/nav.scss
+++ b/study-summer/app/sass/blocks/nav.scss
@@ -81,6 +81,10 @@
     transition: 0.5s;
     transform: translateY(-100%);
     z-index: 2;
+    
+    &--show {
+      transform: translateY(0%);
+    }
   }
   
   .nav__item {
@@ -109,10 +113,18 @@
     font-size: 0;
     border: none;
     background-color: transparent;
-    background-image: url('../img/svg/nav.svg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    transition: 0.5s linear;
+    
+    &--open {
+      background-image: url('../img/svg/nav.svg');
+    }
+    
+    &--close {
+      background-image: url('../img/svg/nav-close.svg');
+    }
   }
 }
 
