--- a/study-summer/app/sass/blocks/popup.scss
+++ b/study-summer/app/sass/blocks/popup.scss
@@ -53,12 +53,12 @@
   background-size: cover;
   filter: blur(10px);
   cursor: pointer;
-  // opacity: 0.5;
+  opacity: 1;
   transition: 0.3s;
   z-index: 1;
   
   &--hide {
-    // opacity: 0;
+    opacity: 0;
     visibility: hidden;
   }
 }
