--- a/study-summer/app/sass/blocks/popup.scss
+++ b/study-summer/app/sass/blocks/popup.scss
@@ -43,17 +43,16 @@
 
 .popup__overlay {
   position: fixed;
-  top: -10%;
-  left: -10%;
-  width: 120%;
-  height: 120%;
-  // background-color: $blue;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: $blue;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  filter: blur(10px);
   cursor: pointer;
-  opacity: 1;
+  opacity: 0.8;
   transition: 0.3s;
   z-index: 1;
   
