--- a/study-summer/app/sass/blocks/programs.scss
+++ b/study-summer/app/sass/blocks/programs.scss
@@ -45,8 +45,8 @@
 .programs__list {
   display: flex;
   justify-content: space-between;
-  margin-top: 0;
-  margin-bottom: 25px;
+  flex-wrap: wrap;
+  margin: 0;
   padding: 0;
   list-style: none;
   
@@ -58,6 +58,7 @@
 .programs__item {
   width: 370px;
   height: 440px;
+  margin-bottom: 30px;
   border-radius: 7px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
   // transition: 0.5s;
@@ -102,11 +103,7 @@
       &--caption {
         display: none;
       }
-    }
-    
-    &:last-child {
-      margin-bottom: 0;
-    }
+    }  
   }
 }
 
@@ -213,7 +210,7 @@
   
   .programs__item {
     width: 345px;
-    margin: auto;
+    margin: 0 auto;
     margin-bottom: 20px;
     
     &--column {
