--- a/study-summer/app/sass/blocks/programs.scss
+++ b/study-summer/app/sass/blocks/programs.scss
@@ -61,7 +61,6 @@
   margin-bottom: 30px;
   border-radius: 7px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
-  // transition: 0.5s;
   
   &--column {
     box-sizing: border-box;
@@ -191,6 +190,21 @@
     
     &::before {
       transform: rotate(360deg);
+    }
+  }
+  
+  &:disabled {
+    background-color: gray;
+    cursor: not-allowed;
+    
+    &:hover,
+    &:focus {
+      background-color: gray;
+      transform: translateY(0);
+      
+      &::before {
+        transform: rotate(0);
+      }
     }
   }
 }
