--- a/study-summer/app/sass/blocks/nav.scss
+++ b/study-summer/app/sass/blocks/nav.scss
@@ -26,6 +26,7 @@
   font-size: 16px;
   font-weight: normal;
   text-decoration: none;
+  outline: none;
   transition: 0.3s;
   
   &:hover,
@@ -39,6 +40,7 @@
   font-size: 22px;
   font-weight: normal;
   text-decoration: none;
+  outline: none;
   transition: 0.3s;
   
   &:hover,
