--- a/study-summer/app/sass/blocks/advantages.scss
+++ b/study-summer/app/sass/blocks/advantages.scss
@@ -61,6 +61,7 @@
   text-decoration: none;
   border-radius: 43px;
   background-color: $red;
+  outline: none;
   transition: 0.3s;
   
   &:hover,
@@ -101,6 +102,7 @@
   background-position: center;
   background-size: cover;
   cursor: pointer;
+  outline: none;
   transition: 0.3s;
   transform: translate(-50%, -50%);
   
@@ -119,8 +121,14 @@
   border-radius: 7px;
   background-color: #000;
   overflow: hidden;
+  transition: 0.3s;
   transform: translate(-50%, -50%);
   z-index: 1;
+  
+  &--hide {
+    opacity: 0;
+    visibility: hidden;
+  }
 }
 
 .advantages__video {
