--- a/study-summer/app/sass/blocks/gallery.scss
+++ b/study-summer/app/sass/blocks/gallery.scss
@@ -22,6 +22,7 @@
   position: relative;
   height: 250px;
   cursor: pointer;
+  overflow: hidden;
   
   &:nth-child(1) {
     width: 50%;
@@ -48,19 +49,19 @@
   }
 }
 
-.gallery__button {
-  width: 100%;
-  height: 100%;
-  padding: 0;
-  border: none;
-  background-color: transparent;
-}
-
 .gallery__img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   cursor: pointer;
+  filter: brightness(100%);
+  outline: none;
+  transition: 0.3s;
+  
+  &:hover,
+  &:focus {
+    filter: brightness(120%);
+  }
 }
 
 @media screen and ($tablet-widths) {
