--- a/study-summer/app/sass/blocks/popup.scss
+++ b/study-summer/app/sass/blocks/popup.scss
@@ -30,6 +30,7 @@
   border: none;
   background-color: transparent;
   cursor: pointer;
+  outline: none;
   transform: translateY(-50%);
   
   &--prev {
@@ -39,6 +40,11 @@
   &--next {
     right: -50px;
   }
+  
+  &:active {
+    transform: translateY(-50%)
+               scale(1.05);
+  }
 }
 
 .popup__overlay {
@@ -47,7 +53,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: $blue;
+  background-color: #000;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
