--- a/study-canada-2019/app/sass/blocks/title.scss
+++ b/study-canada-2019/app/sass/blocks/title.scss
@@ -28,6 +28,14 @@
   border-bottom: 2px solid $main-red;
 }
 
+.title__call {
+  display: block;
+  margin: 10px 0 0 0;
+  font-size: 15px;
+  font-weight: bold;
+  text-align: center;
+}
+
 .title__list {
   margin: 0;
   padding: 0;
