--- a/study-summer/app/sass/blocks/photo.scss
+++ b/study-summer/app/sass/blocks/photo.scss
@@ -27,25 +27,64 @@
 }
 
 .photo__item {
-  width: auto;
+  position: relative;
+  width: 100%;
+  height: 200px;
   margin-right: 5px;
+  cursor: pointer;
+  outline: none;
   
   &:last-child {
     margin-right: 0;
+  }
+  
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 7px;
+    background-color: #000;
+    opacity: 0;
+    transition: 0.3s;
+  }
+  
+  &::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 50px;
+    height: 50px;
+    background-image: url('../img/svg/maximize.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    opacity: 0;
+    transition: 0.3s;
+    transform: translate(-50%, -50%);
+  }
+  
+  &:hover,
+  &:focus {
+    
+    &::before {
+      opacity: 0.5;
+    }
+    
+    &::after {
+      opacity: 1;
+    }
   }
 }
 
 .photo__img {
   width: 100%;
+  height: 100%;
   border-radius: 7px;
   object-fit: cover;
-  cursor: pointer;
-  transition: 0.3s;
-  
-  &:hover,
-  &:focus {
-    transform: scale(1.03);
-  }
 }
 
 .photo__call {
