--- a/study-summer/app/sass/blocks/slider.scss
+++ b/study-summer/app/sass/blocks/slider.scss
@@ -59,6 +59,18 @@
     background-image: url('../img/slider-2.jpg');
   }
   
+  &:nth-child(3) {
+    background-image: url('../img/slider-3.jpg');
+  }
+  
+  &:nth-child(4) {
+    background-image: url('../img/slider-4.jpg');
+  }
+  
+  &:nth-child(5) {
+    background-image: url('../img/slider-5.jpg');
+  }
+  
   &--show {
     opacity: 1;
     z-index: 1;
@@ -68,7 +80,7 @@
 .slider__name {
   margin: 0;
   color: #fff;
-  font-size: 36px;
+  font-size: 32px;
   font-weight: 900;
 }
 
@@ -76,7 +88,7 @@
   display: block;
   margin-bottom: 20px;
   color: #fff;
-  font-size: 24px;
+  font-size: 22px;
   font-weight: bold;
 }
 
