--- a/study-canada-2019/app/sass/blocks/choice.scss
+++ b/study-canada-2019/app/sass/blocks/choice.scss
@@ -60,6 +60,14 @@
   text-align: center;
 }
 
+.choice__call {
+  display: block;
+  margin-bottom: 15px;
+  font-size: 18px;
+  font-weight: bold;
+  text-align: center;
+}
+
 @media screen and ($tablet-widths) {}
 
 @media screen and ($mobile-widths) {
