--- a/study-canada-2019/app/sass/blocks/program.scss
+++ b/study-canada-2019/app/sass/blocks/program.scss
@@ -3,10 +3,11 @@
 }
 
 .program__subheading {
+  display: block;
   margin: 0 0 20px 0;
   color: $main-gray;
   font-size: 18px;
-  font-weight: normal;
+  font-weight: bold;
   text-align: center;
 }
 
