--- a/study-canada-2019/app/sass/blocks/title.scss
+++ b/study-canada-2019/app/sass/blocks/title.scss
@@ -1,5 +1,5 @@
 .title {
-  padding: 10px 0 250px 0;
+  padding: 10px 0 100px 0;
   background: url('../img/title-bg.jpg') no-repeat top / cover;
 }
 
@@ -37,43 +37,15 @@
 }
 
 .title__list {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  
-  &:last-child {
-    opacity: 0.3;
-  }
-}
-
-.title__item {
-  margin: 0 0 40px 0;
-  
-  &:last-child {
-    margin: 0;
-  }
+  margin: 30px 0 60px 0;
 }
 
 .title__name {
-  display: block;
-  margin: 0 0 20px 0;
-  color: $main-gray;
-  font-size: 22px;
-  font-weight: bold;
-  
-  &--big {
-    font-size: 28px;
-    line-height: 35px;
-  }
-  
-  &--red {
-    color: $main-red;
-  }
+  font-size: 18px;
 }
 
 @media screen and ($tablet-widths) {
   .title__content {
-    // width: 400px;
     width: 50%;
   }
   
@@ -83,10 +55,6 @@
   
   .title__subheading {
     font-size: 25px;
-  }
-  
-  .title__name {
-    font-size: 18px;
   }
 }
 
@@ -101,8 +69,7 @@
   }
   
   .title__heading,
-  .title__subheading,
-  .title__name {
+  .title__subheading {
     text-align: center;
   }
   
@@ -113,9 +80,5 @@
   
   .title__subheading {
     font-size: 20px;
-  }
-  
-  .title__list {
-    margin: 0 0 35px 0;
   }
 }
