--- a/study-canada-2019/app/sass/blocks/choice.scss
+++ b/study-canada-2019/app/sass/blocks/choice.scss
@@ -42,6 +42,18 @@
   transition: 0.3s;
   z-index: 5;
   
+  &::after {
+    content: '';
+    position: absolute;
+    left: 50%;
+    bottom: 10px;
+    width: 30px;
+    height: 20px;
+    background: url('../img/svg/arrow.svg') no-repeat center / contain;
+    transition: 0.3s;
+    transform: translateX(-50%);
+  }
+  
   &:hover {
     box-shadow: 0px 0px 20px 0px rgba(35, 31, 32, 0.3);
     transform: scale(1.1);
@@ -52,6 +64,10 @@
     
     .choice__edge {
       opacity: 1;
+    }
+    
+    &:after {
+      opacity: 0;
     }
   }
 }
