--- a/study-canada-2019/app/sass/blocks/title.scss
+++ b/study-canada-2019/app/sass/blocks/title.scss
@@ -12,20 +12,28 @@
   margin: 0 0 10px 0;
   padding: 0 0 10px 0;
   color: $main-red;
-  font-size: 44px;
-  font-weight: bold;
-  line-height: 45px;
-  border-bottom: 2px solid $main-red;
+  font-size: 70px;
+  font-weight: normal;
+  font-family: Pacifico, sans-serif;
+  line-height: 130%;
+  
+  &--big {
+    box-sizing: border-box;
+    display: block;
+    width: 100%;
+    padding-left: 150px;
+    font-size: 90px;
+  }
 }
 
 .title__subheading {
-  display: block;
-  margin: 0 0 30px 0;
-  padding: 0 0 10px 0;
-  color: $main-gray;
+  width: 400px;
+  color: #fff;
   font-size: 20px;
   font-weight: normal;
+  text-align: center;
   border-bottom: 2px solid $main-red;
+  background: linear-gradient( -6deg, rgb(221,2,82) 0%, rgb(222,55,48) 100%);
 }
 
 .title__call {
@@ -38,9 +46,11 @@
 
 .title__list {
   margin: 30px 0 60px 0;
+  list-style: url('../img/bullet.png');
 }
 
 .title__name {
+  color: $main-red;
   font-size: 18px;
 }
 
