--- a/study-canada-2019/app/sass/global/fonts.scss
+++ b/study-canada-2019/app/sass/global/fonts.scss
@@ -1,4 +1,13 @@
 @font-face {
+  font-family: 'Pacifico';
+  src: local('Pacifico Regular'), local('Pacifico-Regular'),
+    url('../fonts/Pacifico-Regular.woff2') format('woff2'),
+    url('../fonts/Pacifico-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
   font-family: 'Circe';
   src: local('Circe Bold'), local('Circe-Bold'),
     url('../fonts/Circe-Bold.woff2') format('woff2'),
